--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
                             <a href="https://run.frondev.com" class="btn">Visit</a>
                         </div>
                     </div>
+
+                    <div class="project-card">
+                        <i class="fas fa-atom"></i>
+                        <div class="project-card-content">
+                            <div class="project-card-text">
+                                <h3>nbody.frondev.com</h3>
+                                <p>Basic N-body physics simulation tool</p>
+                            </div>
+                            <a href="https://nbody.frondev.com" class="btn">Visit</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
